*Release date: XX-XXX-2008*

Core and builtins
-----------------

- Added phase(z) -> phi, polar(z) -> r, phi and rect(r, phi) -> z to the cmath
  module.

- Issue #XXXX: Four new methods were added to the math and cmath modules:
  acosh, asinh, atanh and log1p. Replacement implementations for platforms
  without the four functions and copysign in libm were added to a new file
  Python/pymath.c.

- Fixed repr() and str() of complex numbers with infinity or nan as real or
  imaginary part.

- Clear all free list during a gc.collect() of the highest generation in order
  to allow pymalloc to free more arenas. Python may give back memory to the
  OS earlier.

- Issue #2045: Fix an infinite recursion triggered when printing a subclass of
  collections.defaultdict, if its default_factory is set to a bound method.

- Fixed a minor memory leak in dictobject.c. The content of the free
  list was not freed on interpreter shutdown.

- Limit free list of method and builtin function objects to 256 entries
  each.

- Patch #1953: Added ``sys._compact_freelists()`` and the C API functions
  ``PyInt_CompactFreeList`` and ``PyFloat_CompactFreeList``
  to compact the internal free lists of pre-allocted ints and floats.

- Bug #1983: Fixed return type of fork(), fork1() and forkpty() calls.
  Python expected the return type int but the fork familie returns pi_t.

- Issue #1678380: Fix a bug that identifies 0j and -0j when they appear
  in the same code unit.

- Issue #2025 :  Add tuple.count() and tuple.index() methods to comply with
  the collections.Sequence API.

- Patch #1970 by Antoine Pitrou: Speedup unicode whitespace and linebreak
  detection

- Added ``PyType_ClearCache()`` and ``sys._clear_type_cache`` to clear the
  internal lookup cache for ref leak tests.

- Patch #1473257: generator objects gain a gi_code attribute. This is the
  same object as the func_code attribute of the function that produced the
  generator.
